<resources>
    <string name="app_name">赢话费斗地主</string>
    <string name="confirm_install_hint">安装提示</string>
    <string name="Ensure">确定</string>
    <string name="Cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="prompt2">提   示</string>
    <string name="Send">发送</string>
    <string name="go">打开</string>
    <string name="back">返回</string>
    <string name="feedback">请输入您对游戏的意见</string>
    <string name="returnStr">返回</string>
    <string name="recommend">热力推荐</string>
    <string name="ddz_year">年</string>
    <string name="ddz_month">月</string>
    <string name="ddz_day">日</string>
    <string name="ddz_permanence">永久</string>
    <string name="ddz_you_have">您有</string>
    <string name="ddz_huafeijuan">张话费券</string>
    <string name="ddz_overdue">天后过期</string>
    <string name="ddz_today_overdue">在今天过期</string>
    <string name="ddz_sex">性别</string>
    <string name="ddz_sex_male">男</string>
    <string name="ddz_sex_famale">女</string>
    <string name="ddz_account">账号</string>
    <string name="ddz_account_2">账号：</string>
    <string name="ddz_yuanbao">元宝</string>
    <string name="ddz_huafeijuan_lable">话费券</string>
    <string name="ddz_week_points">本周积分</string>
    <string name="ddz_week_total_points">本周累积积分</string>
    <string name="ddz_week_rank">周排名</string>
    <string name="ddz_person">人</string>
    <string name="ddz_wan_ren">万人</string>
    <string name="ddz_into_fanzuobi">为您启动防作弊组桌系统，请稍候</string>
    <string name="ddz_no_message">尚未有消息，敬请稍后&#8230;</string>
    <string name="ddz_room_tuijian">推    荐</string>
    <string name="ddz_game_over">游戏已结束，请返回分区！</string>
    <string name="ddz_adapte_failed">速配失败,请稍后再试。</string>
    <string name="ddz_level">主人神威无敌，应该去挑战更高的场次~</string>
    <string name="ddz_into_game_room">正在进入游戏房间</string>
    <string name="ddz_adapte_game_room">正在速配游戏房间，请稍候</string>
    <string name="ddz_no_net">再好的游戏没网络也不能玩喔~请检查您的网络或稍后再试</string>
    <string name="ddz_set_net">设置网络</string>
    <string name="ddz_empress_retry">稍后重试</string>
    <string name="ddz_function_not_available">该功能暂不可用&#8230;</string>
    <string name="ddz_count">数量</string>
    <string name="ddz_period_of_validity">有效期</string>
    <string name="ddz_shared">分享</string>
    <string name="ddz_success">领取奖励成功, 祝您游戏愉快！</string>
    <string name="ddz_sdcard_error">请检测Sdcard是否存在！Sdcard卡被禁用！</string>
    <string name="ddz_version">版本号</string>
    <string name="ddz_update_date">更新时间</string>
    <string name="ddz_retry">重试</string>
    <string name="ddz_obtain_server_info_failed">获取服务器信息失败，请重试！</string>
    <string name="ddz_obtain_gift_success">领取成功！</string>
    <string name="ddz_has_obtain_gift">"您已经领取过奖励了！</string>
    <string name="ddz_obtain_gift_failed">领取失败，请重试！</string>
    <string name="ddz_free_zhuandou">免费赚豆</string>
    <string name="ddz_download_failed">下载失败!</string>
    <string name="ddz_file_save_path">文件保存路径</string>
    <string name="ddz_webview_loading">网页加载可能比较慢，稍等会~…</string>
    <string name="ddz_web_connetion_failed">网络不给力，连接失败了，请稍候重试！</string>
    <string name="ddz_web_reconnetion_failed">网络不给力，重连失败了，请稍候重试！</string>
    <string name="ddz_web_connetion_cross">网络连接断开，请检查您的网络或退出游戏稍后再试！</string>
    <string name="ddz_account_load_other_way">您的账号已经在其他地方登录，请退出后再登录！</string>
    <string name="ddz_into_game">省流量、低耗电，话费、实物最好赚</string>
    <string name="ddz_notice_game_net_error">网络连接异常，请重新登录！</string>
    <string name="ddz_yin_huafei_match">赢话费赛</string>
    <string name="ddz_gift_ledou_match">奖10万乐豆比赛</string>
    <string name="ddz_gift_ledou">报名费：1000乐豆</string>
    <string name="ddz_ledou_match_difen">(底分 100)</string>
    <string name="ddz_buy_first_buy_gift">首次充值礼包</string>
    <string name="notice">公告</string>
    <string name="match">比赛报名</string>
    <string name="empty">主人，物品空空的，银家好心塞(&gt;﹏&lt;)</string>
    <string name="actioncenter">活动中心</string>
    <string name="loading">正在加载中，稍等会~</string>
    <string name="ddz_vip">VIP2，3000PK券x10,初级门票x10</string>
    <string name="ddz_vip_jiazhu">看牌，加注</string>
    <string name="ddz_vip_libao">Vip1级礼包</string>
    <string name="ddz_vip_daoqi_date">到期时间：2013&#8211;08&#8211;05</string>
    <string name="ddz_vip_chengzhangzhi">VIP成长值：</string>
    <string name="ddz_vip_week_gift">每周奖励</string>
    <string name="ddz_vip_zensong">赠送</string>
    <string name="ddz_vip_xufei">续费VIP</string>
    <string name="ddz_vip_jiacheng">经验加成</string>
    <string name="ddz_vip_hecheng_chenggonglu">合成成功率</string>
    <string name="ddz_vip_other_player_info">其他玩家信息(指数)</string>
    <string name="ddz_vip_level">VIP等级：</string>
    <string name="ddz_online_count">在线人数:</string>
    <string name="ddz_condition">条件：</string>
    <string name="ddz_freedom">自由</string>
    <string name="ddz_huafei">话费</string>
    <string name="ddz_ziyunhui">智运会</string>
    <string name="ddz_yuezhan">约战</string>
    <string name="mm_video">美女视频</string>
    <string name="ddz_date">时间：</string>
    <string name="ddz_wupin">物品</string>
    <string name="ddz_market">商城</string>
    <string name="ddz_method_not_open">功能还在努力建设中，还请敬请期待哟~~</string>
    <string name="ddz_return_game">正在回到游戏，请稍候</string>
    <string name="continue_game">继续游戏</string>
    <string name="payment_match">报名费用</string>
    <string name="match_num">报名人数:</string>
    <string name="match_condition">报名条件:</string>
    <string name="match_reward">奖励内容:</string>
    <string name="entry_match">进入比赛</string>
    <string name="match_rule">比赛规则</string>
    <string name="empty_str"></string>
    <string name="ddz_match_signuped">"您已报名:</string>
    <string name="ddz_match_begin_game">距离开赛时间还有</string>
    <string name="ddz_match_begin_game_minute">分钟</string>
    <string name="match_reward_info">更多奖励尽在>></string>
    <string name="see">查看</string>
    <string name="match_rank">更多比赛排名信息:</string>
    <string name="match_detail">详情</string>
    <string name="match_baomin">我要报名</string>
    <string name="match_exit">退赛</string>
    <string name="match_eliminate">淘汰</string>
    <string name="match_di">第</string>
    <string name="match_ming">名</string>
    <string name="ddz_donot_loaded">还未登录比赛服务器&#8230;请稍后再试</string>
    <string name="ddz_signuped">主人，咱们已经报名比寒了，不要重复报名~</string>
    <string name="ddz_cost_not_enough">主人，报名条件不满足，不能参赛.</string>
    <string name="ddz_loading_match">正在进入比赛，稍等会~</string>
    <string name="ddz_best_rank">最佳名次：</string>
    <string name="ddz_match_time">参赛次数：</string>
    <string name="ddz_finals_match_time">决赛次数：</string>
    <string name="ddz_net_error">网络繁忙，比赛服务器连接断开，请稍候再试！！</string>
    <string name="ddz_match_feiyong">报名费用：</string>
    <string name="ddz_match_free">免费</string>
    <string name="ddz_match_into_game">正在进入游戏，稍等会~</string>
    <string name="ddz_match_begin_time">开赛时间：</string>
    <string name="ddz_match_end">比赛已结束</string>
    <string name="ddz_match_count_down">开赛倒计时：</string>
    <string name="ddz_match_limiting">限制人数：</string>
    <string name="ddz_match_none">无</string>
    <string name="ddz_match_choose">选择</string>
    <string name="ddz_match_your_rank">您的排名是</string>
    <string name="ddz_match_your_rank_ming">名</string>
    <string name="match_login">正在登录比赛服务器,稍等会~&#8230;</string>
    <string name="pay_login">正在请求支付,请稍后&#8230;</string>
    <string name="pay_error">支付数据异常，请稍候再试</string>
    <string name="buysuccess">购买请求已发送，请您耐心等待购买结果或进行其他操作。</string>
    <string name="buyfail">无法购买，您已请求购买此道具，为避免重复购买，请耐心等待反馈结果后再二次购买。</string>
    <string name="buyerror">暂时没有适合您当前平台的道具支付方式，多谢您的支持。</string>
    <string name="buywap">此道具仅能通过CMWAP购买，请确认您的网络接入点并重新登录购买。</string>
    <string name="payerror">支付订单获取有误，请稍后重试。</string>
    <string name="paySmsErr">获取购买短信失败，请检查您的网络情况</string>
    <string name="start_game">开始游戏</string>
    <string name="i_know">知道啦</string>
    <string name="pay_prompt">选择支付方式</string>
    <string name="pay_btn_ridio">不再弹出提示框</string>
    <string name="action">活动</string>
    <string name="action_time">活动时间</string>
    <string name="action_state">活动状态</string>
    <string name="action_content">活动内容</string>
    <string name="action_doing">进行中</string>
    <string name="action_will_begin">即将开始 </string>
    <string name="action_closed">已结束</string>
    <string name="action_to"> 至 </string>
    <string name="action_count">数量： </string>
    <string name="action_join">立即参与 </string>
    <string name="handsel">赠送</string>
    <string name="use">使用</string>
    <string name="package_linqu">已领取于</string>
    <string name="package_detail_forever">永久</string>
    <string name="package_zenfsong_lable_1">您在</string>
    <string name="package_zenfsong_lable_2">成功赠送给ID为</string>
    <string name="package_zenfsong_lable_3">的好友</string>
    <string name="package_zenfsong_lable_4">个</string>
    <string name="package_duihuan_tip">请在有效期内领取哦！</string>
    <string name="package_id_error">无效的ID</string>
    <string name="package_largess_count_error">无效的赠送数量</string>
    <string name="package_largess_myself_error">不支持赠送自己功能</string>
    <string name="package_not_enaghe_error">道具数量不足或赠送数量无效，无法赠送</string>
    <string name="package_binded_error">该道具已绑定，不可赠送</string>
    <string name="package_largess">赠送物品</string>
    <string name="package_largess_info_error">输入信息有误，请重新输入</string>
    <string name="package_synthetic_material_shortage">合成材料不足</string>
    <string name="package_level">用户VIP等级未达到要求，无法合成</string>
    <string name="package_synthetic_success">成功合成</string>
    <string name="package_input_you_package">个, 道具已放进您的背包</string>
    <string name="package_no_obtain_material">暂未获取您的合成材料,请稍后重试&#8230;</string>
    <string name="package_net_error">网络异常, 道具图片下载失败&#8230;</string>
    <string name="package_arrange_list">主人，物品信息正在加载中，稍等会~</string>
    <string name="package_handsel_daoju">赠送道具</string>
    <string name="package_handsel_id">对方ID号 :</string>
    <string name="package_handsel_id_error">请输入15位以内数字的ID号</string>
    <string name="package_handsel_input_id_again">确认ID号 :</string>
    <string name="package_handsel_input_id_again_error">两次输入的ID不一致，请重新输入</string>
    <string name="package_handsel_count">赠送数量 : </string>
    <string name="package_daoju_name">道具名称</string>
    <string name="package_daoju_info">道具描述</string>
    <string name="package_daoju_hecheng_cailiao">合成材料 : </string>
    <string name="package_daoju_hecheng_count">合成数量 : </string>
    <string name="package_daoju_hecheng_feiyong">合成费用: </string>
    <string name="package_daoju_hecheng_chenggonglu">成功率: </string>
    <string name="entry_market">去商城</string>
    <string name="market_buy">购买</string>
    <string name="market_buy_success">购买成功，请进入您的物品查看。</string>
    <string name="market_price">￥:</string>
    <string name="market_point">点</string>
    <string name="market_lebi">乐币</string>
    <string name="market_yuan">元</string>
    <string name="buy_confirm">确认购买</string>
    <string name="juhao">。</string>
    <string name="wenhao">？</string>
    <string name="cur_vip_level_tips">我的身份: </string>
    <string name="market_expire_tips">到期</string>
    <string name="goods_hot">热</string>
    <string name="goods_discount">折</string>
    <string name="ddz_pay_know">知道了</string>
    <string name="ddz_pay_duihuan">去领取</string>
    <string name="input_nickname">请输入新的昵称</string>
    <string name="bean_need">本次修改需要</string>
    <string name="ex_goods_expire">有效期：</string>
    <string name="ex_empty_records_tips">主人这么厉害，赚点奖品给我呗╮(╯▽╰)╭</string>
    <string name="ex_get_records_failed">获取兑换记录失败，请重试！</string>
    <string name="ex_go_to_game">赚奖品</string>
    <string name="setting">设置</string>
    <string name="visitors">游客账号：</string>
    <string name="user_name">我的名字很长很长</string>
    <string name="switch_account">切换账号</string>
    <string name="voice">背景音乐</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="vibrate">震&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;动</string>
    <string name="audio">游戏音效</string>
    <string name="version">版本号：1.8.3</string>
    <string name="check_update">检查更新</string>
</resources>