<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/buy_dialog_main"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_dialog2_bg"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_centerHorizontal="true" >
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
		    style="@style/dialogTitleStyle"
		    android:text="昵称修改" />

        <EditText
            android:id="@+id/etNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/input_nickname"
            android:singleLine="true"
            android:imeOptions="flagNoExtractUi|actionDone"
            android:layout_marginTop="20dp"
            android:maxEms="7"
            android:maxLength="8"
            style="@style/dialog_edit" />
		<View android:layout_width="10dp"
		    android:layout_height="30dp"
		    />
        <TextView
            android:id="@+id/tvBean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="5dp"
            android:text="@string/bean_need"
            android:textColor="@color/dialog_text_color2"
            android:textSize="15sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/buy_divider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/dialog_divider"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:id="@+id/system_pop_ll_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:gravity="center" >

            <Button
                android:id="@+id/btnConfirm"
                style="@style/exit_2_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ensure"
                 />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/buy_dialog_main"
        android:background="@drawable/btn_dlg_close"
        android:contentDescription="@string/app_name" />

</RelativeLayout>