<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog2_bg"
    android:orientation="vertical" >

    <TextView
        style="@style/dialogTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt" />

    <FrameLayout
        android:layout_width="389dp"
        android:layout_height="128dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp" >

        <ListView
            android:id="@+id/date_list"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:cacheColorHint="#00000000"
            android:divider="#FFCC00"
            android:listSelector="#00000000"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" >
        </ListView>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" 
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/ivCancel"
            style="@style/exit_1_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/ddz_pay_know" />

        <Button
            android:id="@+id/ivEnsure"
            style="@style/exit_2_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ivCancel"
            android:layout_marginLeft="70dp"
            android:layout_toRightOf="@id/ivCancel"
            android:text="@string/ddz_pay_duihuan" />
    </RelativeLayout>

</LinearLayout>