<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="420dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/close_main_top"
        android:paddingBottom="15dp"
        android:background="@drawable/custom_dialog2_bg" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            style="@style/dialogTitleStyle"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
             >

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/userType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visitors"
                    android:textColor="@color/dialog_text_color2" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/user_name"
                    android:textColor="@color/dialog_text_color2" />

                <Button
                    android:id="@+id/setting_main_change_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_yellow"
                    android:text="@string/switch_account"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <ImageView
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/row1"
                android:layout_marginTop="3dp"
                android:background="@drawable/setting_divider_line"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/row1"
                android:layout_marginTop="3dp"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@drawable/img_voice"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:gravity="center"
                        android:text="@string/voice"
                        android:textColor="@color/dialog_text_color2" />

                    <com.mykj.andr.ui.MySlideButton
                        android:id="@+id/setting_main_music_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:checked="true"
                        android:text="@string/open" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:background="@drawable/img_voice"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/audio"
                        android:textColor="@color/dialog_text_color2" />

                    <com.mykj.andr.ui.MySlideButton
                        android:id="@+id/setting_main_audio_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/checked_close_open"
                        android:button="@drawable/buttondown"
                        android:checked="true"
                        android:text="@string/close" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/divider2"
                android:layout_below="@+id/divider2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/divider2"
                android:layout_below="@+id/divider2"
                android:layout_marginTop="8dp"
                android:orientation="horizontal" >

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:background="@drawable/img_vibrate"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="11dp"
                        android:text="@string/vibrate"
                        android:textColor="@color/dialog_text_color2" />

                    <com.mykj.andr.ui.MySlideButton
                        android:id="@+id/setting_main_vibrate_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/checked_close_open"
                        android:button="@drawable/buttondown"
                        android:checked="true"
                        android:text="@string/close" />
                
                
            </LinearLayout>
            <ImageView
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/row2"
                android:layout_marginTop="3dp"
                android:background="@drawable/setting_divider_line"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/row1"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/row3"
                android:background="@drawable/setting_divider_line"
                android:contentDescription="@string/app_name" />
			<LinearLayout 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_alignLeft="@id/divider3"
			    android:layout_alignRight="@id/divider3"
			    android:layout_below="@id/divider3"
			    android:layout_marginTop="10dp"
			    android:id="@+id/ver_line">
			    <TextView
                android:id="@+id/setting_main_ver"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/dialog_text_color2"
                android:textSize="15sp" />
            
            <Button
                android:id="@+id/setting_main_check_ver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_check_update"
                android:text="@string/check_update"
                android:textColor="#FFFFFF" />
			</LinearLayout>
            <View android:layout_width="1dp" 
                android:layout_height="15dp"
                android:layout_below="@id/ver_line"/>
        </RelativeLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/setting_main_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/main"
        android:layout_alignRight="@id/main"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:src="@drawable/btn_dlg_close" />

</RelativeLayout>