<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/exchange_records_bg" >

    <LinearLayout
        android:id="@+id/records_busy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible" >

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />
    </LinearLayout>

    <TextView
        android:id="@+id/tip_failed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/ex_get_records_failed"
        android:textSize="18sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/records_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/records_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="15dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="日期"
                android:textColor="#ffbb02"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="物品名称"
                android:textColor="#ffbb02"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="消耗"
                android:textColor="#ffbb02"
                android:textSize="16sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_exchange_records"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/records_title"
            android:divider="@drawable/exchange_records_divider"
            android:listSelector="@android:color/transparent" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/records_no_data"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_empty_records_tips"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/record_btnToGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:text="@string/ex_go_to_game"
            style="@style/exit_2_style" />
    </LinearLayout>

</RelativeLayout>