<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/exchange_item_bg"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/exchange_item_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/goods_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/exchange_desc_bg"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/tvGoodsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:textColor="#fff881"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/exchange_item_divider" />

            <TextView
                android:id="@+id/tvGoodsExpire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/ex_goods_expire"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvGoodsDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="3"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnGoodsUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_vip_charge"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/use"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>